# project-setup

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pyproject_backup.toml
conf/base/: catalog.yml  parameters_get_data.yml
data/01_raw/: example_data.csv
src/moonlight/: __init__.py  __main__.py
src/moonlight/pipelines/get_data/: __init__.py  nodes.py  pipeline.py
tests/: test_run.py
tests/pipelines/get_data/: test_pipeline.py
