[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "moonlight"
version = "0.1.0"
description = "package description"
authors = ["author <e-mail>"]
readme = "README.md"
# packages = [
#     { include = "moonlight", from = "src" },
# ]

[tool.poetry.scripts]
moonlight = "moonlight.__main__:main"

[tool.poetry.dependencies]
python = "^3.12"

[tool.ruff]
line-length = 88
show-fixes = true
# select = [ "F", "W", "E", "I", "UP", "PL", "T201",]
# ignore = [ "E501",]

[tool.ruff.format]
docstring-code-format = true
